Stop title overlapping nav bar for narrow desktop screens

--- a/i2p2www/static/styles/duck/default.css
+++ b/i2p2www/static/styles/duck/default.css
@@ -30,10 +30,18 @@ div#topbar {
     position:relative;
 }
 
+div#topbar #logo {
+    float: left;
+}
+
 div#topbar #logo img:hover {
     filter:alpha(opacity=60);
     -moz-opacity: 0.6;
     opacity: 0.6;
+}
+
+nav {
+    clear: both;
 }
 
 div#content {
